Updating code due to bug in chrome

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             ================================================== -->
             <section id="experiments">
                 <div class="page-header">
-                    <h1>Experiments</h1>
+                    <h1>Experiments - CHROME ONLY, UNTESTED IN OTHER BROWSERS ^_^</h1>
                 </div>
 
                 <div class="row">
@@ -96,7 +96,7 @@
                     <div class="span4">
                         <h3>HTML 5 Canvas Toys</h3>
                         <h4>Sorting Algorithms</h4>
-                        <p>A visualisation of sorting algorithms, now with sound! (WARNING, LOUD)</p>
+                        <p>A visualisation of sorting algorithms, now with sound! (WARNING, LOUD) - <strong>NOTE, due to a <a href="https://code.google.com/p/chromium/issues/detail?id=324652">bug in chrome</a> sound has been disabled :(</strong></p>
                         <p>Each one of these creates a random array of numbers, uses these to determine the hight of several bars, these bars are then sorted from shortest to highest.</p>
                         <p>Every time a piece is moved, a sound wave is generated, with the height of the bar determining the frequency of the wave.</p>
                         <ul>
