--- a/sorting/cocktail.html
+++ b/sorting/cocktail.html
@@ -16,7 +16,7 @@
         <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
         <script>
             $(function() {
-                var numBlocks = 500, a = shuffle(range(1, numBlocks)), blockheight = 300, blockwidth = 10, intval, canvas, context, width, height, n = a.length, i = 0, value, j;
+                var numBlocks = 300, a = shuffle(range(1, numBlocks)), blockheight = 300, blockwidth = 10, intval, canvas, context, width, height, curmax=a.length - 1, curmin=-1;
 
                 canvas = $("#canvas")[0];
                 width = canvas.width;
@@ -83,69 +83,58 @@
 
                 draw();
 
-                function insertionSort() {
-
-                    if (i < n) {
-
-                        // store the current value because it may shift later
-                        value = a[i];
-                        /*
-                         * Whenever the value in the sorted section is greater than the value
-                         * in the unsorted section, shift all items in the sorted section over
-                         * by one. This creates space in which to insert the value.
-                         */
-                        for (j = i - 1; j > -1 && a[j].value > value.value; j--) {
-                            a[j + 1] = a[j];
-                        }
-                        updateFreq(a[j + 1].value * 6);
-
-                        a[j + 1] = value;
-                        draw();
-                        i++;
-                    } else {
-                        clearInterval(intval);
-
-
-                        intval = setInterval(function() {
-                            checkAll();
-                        }, 5);
-                    }
-                }
-
                 function bubbleSort()
                 {
-                    swapped = false;
-                    for (var i = 0; i < n - 1; i++) {
+                    moved=false;
+                    // increases `begin` because the elements before `begin` are in correct order
+                    curmin++;
+                    for (var i=curmin; i < curmax; i++) {
                         if (a[i].value > a[i + 1].value) {
                             updateFreq(a[i].value * 6);
                             var temp = a[i];
                             a[i] = a[i + 1];
                             a[i + 1] = temp;
                             draw();
+                            moved = true;
                         }
-                        swapped = true;
                     }
-                    n = n - 1;
-                    if (!swapped) {
+                    if (!moved) {
+                        clearInterval(intval);
+
+                        intval = setInterval(function() {
+                            checkAll();
+                        }, 1);
+                    };
+                    curmax--;
+                    for (var i=curmax; i >= curmin; i--)
+                         if (a[i].value < a[i-1].value) {
+                            updateFreq(a[i].value * 6);
+                            var temp = a[i];
+                            a[i] = a[i - 1];
+                            a[i - 1] = temp;
+                            draw();
+                            moved=true;
+                         }
+                    if (!moved) {
                         clearInterval(intval);
 
 
                         intval = setInterval(function() {
                             checkAll();
-                        }, 5);
+                        }, 1);
 
                     }
                 }
 
                 function checkAll() {
                     for (var i = 0; i < numBlocks; i++) {
-                        if (a[i].color != "rgb(0, 255, 0)") {
+                        if(a[i].color != "rgb(0, 255, 0)"){
                             a[i].color = "rgb(0, 255, 0)";
                             updateFreq(a[i].value * 6);
                             draw();
                             break;
                         }
-                        if (a[numBlocks - 1].color == "rgb(0, 255, 0)") {
+                        if(a[numBlocks-1].color == "rgb(0, 255, 0)"){
                             clearInterval(intval);
                             // kill sound
                             oscillator.disconnect();
@@ -166,18 +155,19 @@
                 }
 
                 intval = setInterval(function() {
-                    insertionSort();
+                    bubbleSort();
                 }, 1000 / 36);
 
 
-                var oscContext = new webkitAudioContext(),
+
+                var oscContext = new AudioContext(),
                         oscillator = oscContext.createOscillator();
+                oscillator.start(); // this method doesn't seem to exist, though it's in the docs?
 
                 var updateFreq = function(freq) {
-                    oscillator.type = parseInt(3);
+                    oscillator.type = 'sine';
                     oscillator.frequency.value = freq;
                     oscillator.connect(oscContext.destination);
-                    oscillator.noteOn;//DISABLED DUE TO BUG IN CHROME && oscillator.noteOn(0); // this method doesn't seem to exist, though it's in the docs?
                 };
 
 
