--- a/ukguessr/index.html
+++ b/ukguessr/index.html
@@ -1,12 +1,12 @@
-<?php
-//key = key=AIzaSyBQkJZJCF0krHo-j8XeT4m1_BuQyZDDWgg
-?>
 <!DOCTYPE html>
 <html>
     <head>
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
         <script type="text/javascript"
-                src="http://maps.googleapis.com/maps/api/js?sensor=false&region=GB">
+                src="http://maps.googleapis.com/maps/api/js?sensor=false&region=GB&key=AIzaSyBQkJZJCF0krHo-j8XeT4m1_BuQyZDDWgg">
+            <!--<script type="text/javascript"-->
+            <!--src="http://maps.googleapis.com/maps/api/js?sensor=false&region=GB&key=AIzaSyDnck2lthdiVxoo3PurqbfyYZGQBwRAafU">-->
+
         </script>
         <link href="bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="main.css" rel="stylesheet" type="text/css">
@@ -18,7 +18,7 @@
         <!-- Modal -->
         <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">ï¿½</button>
             <h4 id="myModalLabel">RESULT!</h4>
           </div>
           <div class="modal-body">
